--- a/style.css
+++ b/style.css
@@ -1,26 +1,254 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,800;0,900;1,200;1,300;1,700;1,800;1,900&display=swap');
-
 *{
     margin: 0;
     padding: 0;
+}
+html{
+    scroll-behavior: smooth;
 }
 body{
     font-family: 'poppins', sans-serif;
 }
 header{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
+
+    margin-bottom: 50px;
+    padding: 10px;
 
     box-shadow: 2px 2px 14px #00000030;
 }
-header h1{
-    padding: 20px;
+header .logo{
+    display: flex;
+    flex-direction: row;
 }
-header p{
-    padding-bottom: 10px;
+header .logo img{
+    width: 50px;
+    height: 50px;
+    padding: 2px;
+}
+header .button ul a{
+    color: rgb(151, 22, 184);
+    text-decoration: none;
+}
+header .button ul li{
+    list-style: none;
+    border: 2px solid rgb(151, 22, 184);
+    padding: 8px;
+    border-radius: 15px;
+}
+header .button ul li:hover{
+    border: 2px solid transparent;
+    color: #fff;
+    background-color: rgb(151, 22, 184);
+    
 }
 main{
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    margin: 16px;
+}
+.card{
+    width: 400px;
+    padding: 10px;
+    margin-bottom: 30px;
+
+    background-color: #fff;
+
+    border: 5px solid rgb(151, 22, 184);
+    border-radius: 12px;
+
+    text-align: center;
+}
+.card h2{
+    margin: 5px;
+}
+.img1{
+    background: url(images/astronomia.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img2{
+    background: url(images/aurora.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img3{
+    background: url(images/cometa.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img4{
+    background: url(images/eclipse.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img5{
+    background: url(images/estrela.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img6{
+    background: url(images/foguete.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img7{
+    background: url(images/galaxia.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img8{
+    background: url(images/lua.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img9{
+    background: url(images/meteoro.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img10{
+    background: url(images/nasa.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img11{
+    background: url(images/planeta.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img12{
+    background: url(images/pulsar.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img13{
+    background: url(images/quasar.png) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img14{
+    background: url(images/satelite.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img15{
+    background: url(images/sistema-solar.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img16{
+    background: url(images/sol.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img17{
+    background: url(images/spacex.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img18{
+    background: url(images/universo.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img19{
+    background: url(images/uranografia.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.img20{
+    background: url(images/via-lactea.jpg) center/cover;
+    
+    border-radius: 10px;
+    margin-bottom: 5px;
+
+    height: 200px;
+    width: 100%;
+}
+.participantes h3{
+    font-size: 2em;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    background: linear-gradient(to right, rgb(209, 72, 243),rgb(132, 18, 160));
 }
