--- a/style.css
+++ b/style.css
@@ -46,9 +46,10 @@ header .button ul li:hover{
 }
 main{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 450px 450px 450px;
+    place-items: center;
 
-    margin: 16px;
+    margin: 0;
 }
 .card{
     width: 400px;
@@ -245,10 +246,174 @@ main{
     height: 200px;
     width: 100%;
 }
+.cards-participantes{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
+
+    margin: 0;
+}
 .participantes h3{
+    margin-bottom: 20px;
     font-size: 2em;
     width: 100%;
     text-align: center;
     color: #fff;
     background: linear-gradient(to right, rgb(209, 72, 243),rgb(132, 18, 160));
+}
+.card-par{
+    width: 300px;
+    padding: 20px;
+    margin-bottom: 30px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.295);
+
+    background-color: #fff;
+
+    border-radius: 12px;
+
+    text-align: center;
+}
+.par1{
+    background: url(images/pfps/gabriel.jpg) center/cover;
+    
+    border-radius: 50px;
+    margin-bottom: 5px;
+    margin: auto;
+
+    height: 100px;
+    width: 100px;
+}
+.par2{
+    background: url(images/pfps/kauan.jpg) center/cover;
+    
+    border-radius: 50px;
+    margin-bottom: 5px;
+    margin: auto;
+
+    height: 100px;
+    width: 100px;
+}
+.par3{
+    background: url(images/pfps/luciano.jpg) center/cover;
+    
+    border-radius: 50px;
+    margin-bottom: 5px;
+    margin: auto;
+
+    height: 100px;
+    width: 100px;
+}
+li{
+    list-style: none;
+}
+@media screen and (max-width: 1345px) {
+    main{
+        grid-template-columns: 50% 50%;
+        place-items: center;
+    }
+}
+@media screen and (max-width: 1125px) {
+    main{
+        grid-template-columns: 50% 50%;
+        place-items: center;
+        margin: 0;
+    }
+    .cards-participantes{
+        grid-template-columns: 300px;
+        align-items: center;
+        justify-content: center;
+    }
+}
+@media screen and (max-width: 995px) {
+    main{
+        grid-template-columns: 100%;
+        place-items: center;
+        margin: 0;
+    }
+    .cards-participantes{
+        grid-template-columns: 100%;
+        place-items: center;
+
+        margin: 0;
+    }
+}
+@media screen and (max-width: 480px) {
+    header{
+        flex-direction: column;
+        padding: 0;
+        padding-bottom: 10px;
+    }
+    .button{
+        width: 130px;
+        margin: auto;
+    }
+    main{
+        display: grid;
+        grid-template-columns: 100%;
+
+        margin: 0;
+    }
+    .card{
+        border: none;
+        border-top: 5px solid rgb(151, 22, 184);
+        border-radius: 0;
+    }
+    .cards-participantes{
+        grid-template-columns: 100%;
+        place-items: center;
+
+        margin: 0;
+    }
+}
+@media screen and (max-width: 430px) {
+    header{
+        flex-direction: column;
+        padding: 0;
+        padding-bottom: 10px;
+    }
+    header .logo{
+        display: flex;
+        flex-direction: row;
+    }
+    header .logo h1{
+        font-size: 1.5em;
+    }
+    .button{
+        width: 130px;
+        margin: auto;
+    }
+    main{
+        display: grid;
+        grid-template-columns: 100%;
+
+        margin: 0;
+    }
+    .card{
+        border: none;
+        border-top: 5px solid rgb(151, 22, 184);
+        border-radius: 0;
+        padding: 0;
+        width: 300px;
+    }
+    .card .img1, .img2, .img3, .img4, .img5, .img6, .img7, .img8, .img9,.img10, .img11, .img12,.img13,.img14, .img15, .img16, .img17, .img18, .img19, .img20{
+        height: 150px;
+        width: 200px;
+        margin: auto;
+        margin-bottom: 10px;
+    }
+    .cards-participantes{
+        grid-template-columns: 100%;
+        place-items: center;
+
+        margin: 0;
+    }
+}
+@media screen and (max-width: 330px) {
+    header .logo h1{
+        font-size: 1.3em;
+    }
+    .card-par{
+        padding: 10px;
+        width: 250px;
+    }
 }
