--- a/style.css
+++ b/style.css
@@ -127,6 +127,20 @@ main{
 li{
     list-style: none;
 }
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    color: #fff;
+    background-color: rgb(209, 72, 243);
+    
+    height: 80px;
+
+}
+footer a{
+    color: rgb(132, 18, 160);
+}
 @media screen and (max-width: 1345px) {
     main{
         grid-template-columns: 50% 50%;
